...
        headerShown: false,
        gestureEnabled: true,
        animationEnabled: true
      }}
    >
      <AuthStack.Screen 
        name="Login" 
        component={EnhancedLoginScreen}
        options={{
          animationTypeForReplace: 'pop'
        }}
      />
      <AuthStack.Screen 
        name="Register" 
        component={RegisterPhaseOneScreen}
        options={{
          headerShown: false
        }}
      />
      <AuthStack.Screen 
...
